Compilador/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones main

   2  llaves_array : '[' CTE_ENTERA ']'
   3               | '[' CTE_ENTERA ']' llaves_array

   4  array : llaves_array tipo

   5  struct : STRUCT '{' lista_campos '}'

   6  campo : lista_id tipo ';'

   7  lista_campos : lista_campos campo
   8               | campo

   9  tipo : INT
  10       | FLOAT
  11       | CHAR
  12       | array
  13       | struct

  14  tipo_simple : INT
  15              | FLOAT
  16              | CHAR

  17  lista_definiciones : lista_definiciones definicion
  18                     |

  19  lista_def_variables : lista_def_variables def_variable_completa
  20                      |

  21  definicion : def_variable_completa
  22             | def_funcion

  23  def_variable_completa : VAR lista_id tipo ';'

  24  def_variable : ID tipo

  25  lista_id : lista_id ',' ID
  26           | ID

  27  lista_parametro_tipo_funcion : lista_parametro_tipo
  28                               |

  29  lista_parametro_tipo : lista_parametro_tipo ',' def_variable
  30                       | def_variable

  31  tipo_funcion : '(' lista_parametro_tipo_funcion ')' tipo_simple
  32               | '(' lista_parametro_tipo_funcion ')'

  33  main : FUNC main_id '(' ')' '{' lista_def_variables lista_sentencias '}'

  34  main_id : MAIN

  35  def_funcion : FUNC ID tipo_funcion '{' lista_def_variables lista_sentencias '}'

  36  lista_sentencias : lista_sentencias sentencia
  37                   |

  38  sentencia : RETURN expresion ';'
  39            | READ '(' lista_expresiones ')' ';'
  40            | WRITE '(' lista_expresiones ')' ';'
  41            | if_else
  42            | while
  43            | expresion '=' expresion ';'
  44            | expresion AND_AS expresion ';'
  45            | expresion OR_AS expresion ';'
  46            | ID '(' lista_expresiones_llamada_fun ')' ';'

  47  if_else : IF expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'
  48          | IF expresion '{' lista_sentencias '}'
  49          | IF '(' expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'

  50  while : WHILE '(' expresion ')' '{' lista_sentencias '}'
  51        | WHILE expresion '{' lista_sentencias '}'

  52  lista_expresiones_llamada_fun : lista_expresiones
  53                                |

  54  lista_expresiones : lista_expresiones ',' expresion
  55                    | expresion

  56  expresion : expresion '+' expresion
  57            | expresion '*' expresion
  58            | expresion '/' expresion
  59            | expresion '-' expresion
  60            | expresion '%' expresion
  61            | expresion EQ expresion
  62            | expresion NOT_EQ expresion
  63            | expresion '>' expresion
  64            | expresion '<' expresion
  65            | expresion L_EQ expresion
  66            | expresion G_EQ expresion
  67            | expresion AND expresion
  68            | expresion OR expresion
  69            | expresion AND_AS expresion
  70            | expresion OR_AS expresion
  71            | ID '(' lista_expresiones_llamada_fun ')'
  72            | tipo '(' expresion ')'
  73            | expresion '[' expresion ']'
  74            | expresion '.' ID
  75            | expresion '!' expresion
  76            | '-' expresion
  77            | '(' expresion ')'
  78            | '!' expresion
  79            | ID
  80            | CTE_CHAR
  81            | CTE_REAL
  82            | CTE_ENTERA

state 0
	$accept : . programa $end  (0)
	lista_definiciones : .  (18)

	.  reduce 18

	programa  goto 1
	lista_definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definiciones . main  (1)
	lista_definiciones : lista_definiciones . definicion  (17)

	VAR  shift 3
	FUNC  shift 4
	.  error

	main  goto 5
	definicion  goto 6
	def_variable_completa  goto 7
	def_funcion  goto 8


state 3
	def_variable_completa : VAR . lista_id tipo ';'  (23)

	ID  shift 9
	.  error

	lista_id  goto 10


state 4
	main : FUNC . main_id '(' ')' '{' lista_def_variables lista_sentencias '}'  (33)
	def_funcion : FUNC . ID tipo_funcion '{' lista_def_variables lista_sentencias '}'  (35)

	ID  shift 11
	MAIN  shift 12
	.  error

	main_id  goto 13


state 5
	programa : lista_definiciones main .  (1)

	.  reduce 1


state 6
	lista_definiciones : lista_definiciones definicion .  (17)

	.  reduce 17


state 7
	definicion : def_variable_completa .  (21)

	.  reduce 21


state 8
	definicion : def_funcion .  (22)

	.  reduce 22


state 9
	lista_id : ID .  (26)

	.  reduce 26


state 10
	def_variable_completa : VAR lista_id . tipo ';'  (23)
	lista_id : lista_id . ',' ID  (25)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	','  shift 19
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 22
	struct  goto 23


state 11
	def_funcion : FUNC ID . tipo_funcion '{' lista_def_variables lista_sentencias '}'  (35)

	'('  shift 24
	.  error

	tipo_funcion  goto 25


state 12
	main_id : MAIN .  (34)

	.  reduce 34


state 13
	main : FUNC main_id . '(' ')' '{' lista_def_variables lista_sentencias '}'  (33)

	'('  shift 26
	.  error


state 14
	tipo : INT .  (9)

	.  reduce 9


state 15
	tipo : FLOAT .  (10)

	.  reduce 10


state 16
	tipo : CHAR .  (11)

	.  reduce 11


state 17
	struct : STRUCT . '{' lista_campos '}'  (5)

	'{'  shift 27
	.  error


state 18
	llaves_array : '[' . CTE_ENTERA ']'  (2)
	llaves_array : '[' . CTE_ENTERA ']' llaves_array  (3)

	CTE_ENTERA  shift 28
	.  error


state 19
	lista_id : lista_id ',' . ID  (25)

	ID  shift 29
	.  error


state 20
	array : llaves_array . tipo  (4)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 30
	struct  goto 23


state 21
	tipo : array .  (12)

	.  reduce 12


state 22
	def_variable_completa : VAR lista_id tipo . ';'  (23)

	';'  shift 31
	.  error


state 23
	tipo : struct .  (13)

	.  reduce 13


state 24
	tipo_funcion : '(' . lista_parametro_tipo_funcion ')' tipo_simple  (31)
	tipo_funcion : '(' . lista_parametro_tipo_funcion ')'  (32)
	lista_parametro_tipo_funcion : .  (28)

	ID  shift 32
	')'  reduce 28

	def_variable  goto 33
	lista_parametro_tipo_funcion  goto 34
	lista_parametro_tipo  goto 35


state 25
	def_funcion : FUNC ID tipo_funcion . '{' lista_def_variables lista_sentencias '}'  (35)

	'{'  shift 36
	.  error


state 26
	main : FUNC main_id '(' . ')' '{' lista_def_variables lista_sentencias '}'  (33)

	')'  shift 37
	.  error


state 27
	struct : STRUCT '{' . lista_campos '}'  (5)

	ID  shift 9
	.  error

	lista_campos  goto 38
	campo  goto 39
	lista_id  goto 40


state 28
	llaves_array : '[' CTE_ENTERA . ']'  (2)
	llaves_array : '[' CTE_ENTERA . ']' llaves_array  (3)

	']'  shift 41
	.  error


state 29
	lista_id : lista_id ',' ID .  (25)

	.  reduce 25


state 30
	array : llaves_array tipo .  (4)

	.  reduce 4


state 31
	def_variable_completa : VAR lista_id tipo ';' .  (23)

	.  reduce 23


state 32
	def_variable : ID . tipo  (24)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 42
	struct  goto 23


state 33
	lista_parametro_tipo : def_variable .  (30)

	.  reduce 30


state 34
	tipo_funcion : '(' lista_parametro_tipo_funcion . ')' tipo_simple  (31)
	tipo_funcion : '(' lista_parametro_tipo_funcion . ')'  (32)

	')'  shift 43
	.  error


state 35
	lista_parametro_tipo_funcion : lista_parametro_tipo .  (27)
	lista_parametro_tipo : lista_parametro_tipo . ',' def_variable  (29)

	','  shift 44
	')'  reduce 27


state 36
	def_funcion : FUNC ID tipo_funcion '{' . lista_def_variables lista_sentencias '}'  (35)
	lista_def_variables : .  (20)

	.  reduce 20

	lista_def_variables  goto 45


state 37
	main : FUNC main_id '(' ')' . '{' lista_def_variables lista_sentencias '}'  (33)

	'{'  shift 46
	.  error


state 38
	struct : STRUCT '{' lista_campos . '}'  (5)
	lista_campos : lista_campos . campo  (7)

	ID  shift 9
	'}'  shift 47
	.  error

	campo  goto 48
	lista_id  goto 40


state 39
	lista_campos : campo .  (8)

	.  reduce 8


state 40
	campo : lista_id . tipo ';'  (6)
	lista_id : lista_id . ',' ID  (25)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	','  shift 19
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 49
	struct  goto 23


state 41
	llaves_array : '[' CTE_ENTERA ']' .  (2)
	llaves_array : '[' CTE_ENTERA ']' . llaves_array  (3)

	.  reduce 2

	llaves_array  goto 50


state 42
	def_variable : ID tipo .  (24)

	.  reduce 24


state 43
	tipo_funcion : '(' lista_parametro_tipo_funcion ')' . tipo_simple  (31)
	tipo_funcion : '(' lista_parametro_tipo_funcion ')' .  (32)

	INT  shift 51
	FLOAT  shift 52
	CHAR  shift 53
	'{'  reduce 32

	tipo_simple  goto 54


state 44
	lista_parametro_tipo : lista_parametro_tipo ',' . def_variable  (29)

	ID  shift 32
	.  error

	def_variable  goto 55


state 45
	lista_def_variables : lista_def_variables . def_variable_completa  (19)
	def_funcion : FUNC ID tipo_funcion '{' lista_def_variables . lista_sentencias '}'  (35)
	lista_sentencias : .  (37)

	VAR  shift 3
	CTE_ENTERA  reduce 37
	CTE_CHAR  reduce 37
	CTE_REAL  reduce 37
	ID  reduce 37
	READ  reduce 37
	WRITE  reduce 37
	WHILE  reduce 37
	IF  reduce 37
	INT  reduce 37
	FLOAT  reduce 37
	CHAR  reduce 37
	STRUCT  reduce 37
	RETURN  reduce 37
	'-'  reduce 37
	'!'  reduce 37
	'['  reduce 37
	'}'  reduce 37
	'('  reduce 37

	def_variable_completa  goto 56
	lista_sentencias  goto 57


state 46
	main : FUNC main_id '(' ')' '{' . lista_def_variables lista_sentencias '}'  (33)
	lista_def_variables : .  (20)

	.  reduce 20

	lista_def_variables  goto 58


state 47
	struct : STRUCT '{' lista_campos '}' .  (5)

	.  reduce 5


state 48
	lista_campos : lista_campos campo .  (7)

	.  reduce 7


state 49
	campo : lista_id tipo . ';'  (6)

	';'  shift 59
	.  error


state 50
	llaves_array : '[' CTE_ENTERA ']' llaves_array .  (3)

	.  reduce 3


state 51
	tipo_simple : INT .  (14)

	.  reduce 14


state 52
	tipo_simple : FLOAT .  (15)

	.  reduce 15


state 53
	tipo_simple : CHAR .  (16)

	.  reduce 16


state 54
	tipo_funcion : '(' lista_parametro_tipo_funcion ')' tipo_simple .  (31)

	.  reduce 31


state 55
	lista_parametro_tipo : lista_parametro_tipo ',' def_variable .  (29)

	.  reduce 29


state 56
	lista_def_variables : lista_def_variables def_variable_completa .  (19)

	.  reduce 19


state 57
	def_funcion : FUNC ID tipo_funcion '{' lista_def_variables lista_sentencias . '}'  (35)
	lista_sentencias : lista_sentencias . sentencia  (36)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 63
	READ  shift 64
	WRITE  shift 65
	WHILE  shift 66
	IF  shift 67
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	RETURN  shift 68
	'-'  shift 69
	'!'  shift 70
	'['  shift 18
	'}'  shift 71
	'('  shift 72
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 73
	struct  goto 23
	sentencia  goto 74
	expresion  goto 75
	if_else  goto 76
	while  goto 77


state 58
	lista_def_variables : lista_def_variables . def_variable_completa  (19)
	main : FUNC main_id '(' ')' '{' lista_def_variables . lista_sentencias '}'  (33)
	lista_sentencias : .  (37)

	VAR  shift 3
	CTE_ENTERA  reduce 37
	CTE_CHAR  reduce 37
	CTE_REAL  reduce 37
	ID  reduce 37
	READ  reduce 37
	WRITE  reduce 37
	WHILE  reduce 37
	IF  reduce 37
	INT  reduce 37
	FLOAT  reduce 37
	CHAR  reduce 37
	STRUCT  reduce 37
	RETURN  reduce 37
	'-'  reduce 37
	'!'  reduce 37
	'['  reduce 37
	'}'  reduce 37
	'('  reduce 37

	def_variable_completa  goto 56
	lista_sentencias  goto 78


state 59
	campo : lista_id tipo ';' .  (6)

	.  reduce 6


state 60
	expresion : CTE_ENTERA .  (82)

	.  reduce 82


state 61
	expresion : CTE_CHAR .  (80)

	.  reduce 80


state 62
	expresion : CTE_REAL .  (81)

	.  reduce 81


state 63
	sentencia : ID . '(' lista_expresiones_llamada_fun ')' ';'  (46)
	expresion : ID . '(' lista_expresiones_llamada_fun ')'  (71)
	expresion : ID .  (79)

	'('  shift 79
	NOT_EQ  reduce 79
	AND  reduce 79
	OR  reduce 79
	EQ  reduce 79
	L_EQ  reduce 79
	G_EQ  reduce 79
	AND_AS  reduce 79
	OR_AS  reduce 79
	'='  reduce 79
	'>'  reduce 79
	'<'  reduce 79
	'+'  reduce 79
	'-'  reduce 79
	'*'  reduce 79
	'/'  reduce 79
	'%'  reduce 79
	'!'  reduce 79
	'['  reduce 79
	'.'  reduce 79


state 64
	sentencia : READ . '(' lista_expresiones ')' ';'  (39)

	'('  shift 80
	.  error


state 65
	sentencia : WRITE . '(' lista_expresiones ')' ';'  (40)

	'('  shift 81
	.  error


state 66
	while : WHILE . '(' expresion ')' '{' lista_sentencias '}'  (50)
	while : WHILE . expresion '{' lista_sentencias '}'  (51)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 82
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 69
	'!'  shift 70
	'['  shift 18
	'('  shift 83
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 73
	struct  goto 23
	expresion  goto 84


state 67
	if_else : IF . expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (47)
	if_else : IF . expresion '{' lista_sentencias '}'  (48)
	if_else : IF . '(' expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (49)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 82
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 69
	'!'  shift 70
	'['  shift 18
	'('  shift 85
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 73
	struct  goto 23
	expresion  goto 86


state 68
	sentencia : RETURN . expresion ';'  (38)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 82
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 69
	'!'  shift 70
	'['  shift 18
	'('  shift 72
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 73
	struct  goto 23
	expresion  goto 87


state 69
	expresion : '-' . expresion  (76)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 82
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 69
	'!'  shift 70
	'['  shift 18
	'('  shift 72
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 73
	struct  goto 23
	expresion  goto 88


state 70
	expresion : '!' . expresion  (78)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 82
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 69
	'!'  shift 70
	'['  shift 18
	'('  shift 72
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 73
	struct  goto 23
	expresion  goto 89


state 71
	def_funcion : FUNC ID tipo_funcion '{' lista_def_variables lista_sentencias '}' .  (35)

	.  reduce 35


state 72
	expresion : '(' . expresion ')'  (77)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 82
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 69
	'!'  shift 70
	'['  shift 18
	'('  shift 72
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 73
	struct  goto 23
	expresion  goto 90


state 73
	expresion : tipo . '(' expresion ')'  (72)

	'('  shift 91
	.  error


state 74
	lista_sentencias : lista_sentencias sentencia .  (36)

	.  reduce 36


state 75
	sentencia : expresion . '=' expresion ';'  (43)
	sentencia : expresion . AND_AS expresion ';'  (44)
	sentencia : expresion . OR_AS expresion ';'  (45)
	expresion : expresion . '+' expresion  (56)
	expresion : expresion . '*' expresion  (57)
	expresion : expresion . '/' expresion  (58)
	expresion : expresion . '-' expresion  (59)
	expresion : expresion . '%' expresion  (60)
	expresion : expresion . EQ expresion  (61)
	expresion : expresion . NOT_EQ expresion  (62)
	expresion : expresion . '>' expresion  (63)
	expresion : expresion . '<' expresion  (64)
	expresion : expresion . L_EQ expresion  (65)
	expresion : expresion . G_EQ expresion  (66)
	expresion : expresion . AND expresion  (67)
	expresion : expresion . OR expresion  (68)
	expresion : expresion . AND_AS expresion  (69)
	expresion : expresion . OR_AS expresion  (70)
	expresion : expresion . '[' expresion ']'  (73)
	expresion : expresion . '.' ID  (74)
	expresion : expresion . '!' expresion  (75)
